# marl-pursuit-evasion-lab

./: .gitignore  BEGINNER_GUIDE.md  PROJECT_AUDIT_REPORT.md  PROJECT_INTERVIEW_GUIDE.md  README.md  pyproject.toml
configs/: dqn_baseline.yaml  dqn_curriculum_team_reward.yaml  mappo_baseline.yaml  random_baseline.yaml  smoke_test.yaml
docs/superpowers/plans/: 2026-06-06-post-seedfix-full-rerun.md  2026-06-07-best-checkpoint-rerun.md
src/pursuit_lab/: __init__.py  config.py  constants.py  dqn.py  envs.py  evaluate.py  evaluate_runs.py  evaluation.py  mappo.py  metrics.py  plot.py  render.py  rendering.py  replay.py  rewards.py  run_experiments.py  train.py  utils.py
tests/: test_cli_smoke.py  test_dqn.py  test_env.py  test_evaluate_runs.py  test_mappo.py  test_mappo_cli.py  test_rendering.py  test_replay.py  test_rewards_and_metrics.py  test_run_experiments.py
